--- a/Arte Narrativa.html
+++ b/Arte Narrativa.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="PortFólio.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">PortFólio</span>
+									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">PortFólio</span>
 								</a>
 
 							<!-- Nav -->
@@ -53,10 +53,10 @@
 						<div class="inner">
 							<h1>Arte Narrativa</h1>
 							<div class="row gtr-uniform">
-								<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/pint1.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/pint2.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/pint3.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/tudo.jpg" alt="" /></span></div>
 							<p>Projeto pictórico que considera a relação entre a pintura e a literatura, escolhi o texto “A Noite”, de Guy Maupassant. A obra está representada numa série de quatro pinturas, algo mais abstrato, não tão figurativo. Os quadros representam os rostos de um homem, o narrador da obra e as cores representam os seus sentimentos.</p>
 							<p>O primeiro quadro tem as cores azul e amarelo representando a noite luzente que ele no início tanto adora. O segundo possui maioritariamente o branco com apontamentos a vermelho junto do peito da figura representando o frio que sente caminhando ao longo da noite e junto ao rio e o apontamento junto do peito por estar a ficar fraco e a morrer. O terceiro maioritariamente a vermelho demonstrando a dor e o sangue representando a morte.</p>
 							<p>Materiais: madeira (mdf) (16x15cm) utilizando a técnica mista de óleo com acrílico e tela (60x22cm) a o óleo.</p>
