--- a/Curriculo.html
+++ b/Curriculo.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="PortFólio.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">PortFólio</span>
+									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">PortFólio</span>
 								</a>
 
 							<!-- Nav -->
