--- a/Nisa Landing.html
+++ b/Nisa Landing.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="PortFólio.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">PortFólio</span>
+									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">PortFólio</span>
 								</a>
 
 							<!-- Nav -->
@@ -53,12 +53,12 @@
 						<div class="inner">
 							<h1>Nisa Landing</h1>
 									<div class="row gtr-uniform">
-										<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/imagem1.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/imagemm2.png" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/nisaa2.png" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/nisa2.png" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/nisa1.png" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/imagem2.png" alt="" /></span></div>
 							<p>A proposta era fazer um produto para que esta tradição persicita de modo a não perder a Alma e a sua Identidade. Tendo como referência a olaria de Nisa, uma olaria em ‘vias de extinção’, a solução foi criar um pack, Nisa Landing, que serve para o utilizador construir uma pequena bilha igual às que são feitas em Nisa, de modo a promover essa atividade. Os utilizadores serão tanto jovens como adultos, tendo todos eles em comum a vontae de obter mais conhecimento sobre o património de Nisa, aprendendo assim uma das artes da terra, a Olaria Pedrada.</p>
 							<p>Produto de fácil interação. Destinado a toda a familia.</p>
 							<p>Material e Conteudo: Cartão forrado a cortiça, tendo 25,5cm de comprimento, 17cm de largura e 6,5cm de altura. No interior podesse encontrar três utensilios para esculpir, uma porção de barro, uma porção de quartzos e um manual de instruções.</p>
