--- a/PortFólio.html
+++ b/PortFólio.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="PortFólio.html" class="logo">
-									<span class="symbol"><img src="\Eselx\3ºAno\Design de Produto\meusite\Phantom\images\logo.png" alt="" /></span><span class="title">PortFólio</span>
+									<span class="symbol"><img src="images\logo.png" alt="" /></span><span class="title">PortFólio</span>
 								</a>
 
 							<!-- Nav -->
@@ -43,8 +43,8 @@
 							<li><a href="Curriculo.html">Curriculum</a></li>
 							<li><a href="Arte Narrativa.html">Pintura</a></li>
 							<li><a href="Nisa Landing.html">Design de Produto</a></li>
-							<li><a href="index.html">Design Gráfico</a></li>
-							<li><a href="index.html">Representação Digital</a></li>
+							<li><a href="CD.html">Design Gráfico</a></li>
+							<li><a href="Representação.html">Representação Digital</a></li>
 						</ul>
 					</nav>
 
@@ -83,7 +83,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="CD.html">
 										<h2>Design Gráfico</h2>
 										<div class="content">
 											<p>Capa de um CD</p>
@@ -94,7 +94,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Representação.html">
 										<h2>Representação Digita</h2>
 										<div class="content">
 											<p>Trabalhos feitos em Blender</p>
