Tentar meter aqui uma imagem...mas está complicado.

--- a/Curriculo.html
+++ b/Curriculo.html
@@ -52,11 +52,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Curriculo</h1>
-							<span class="image main"><img src="\Eselx\3ºAno\Design de Produto\meusite\Phantom\images\logoo.png" alt="" /></span>
-							<p>nbhiekjrgkdjnfgvkljhgkv rhth betyerybertyb </p>
-							<p>dgkurgbr bhl eulb lb l bli blth b t  g  jkrgjkv</p>
-							<p>ryjtrhbui uhrgukbjh hguklbjhvg uhtbulkebyvg .</p>
-							<p>tgjgkujwrfbujwe iwefbkjwefb  sejfnkjwf kj ijfgnijfgbw ijfiwsfi </p>
+							<img src="images/Currículo Milene Barbosa2.jpg" alt="" />
 						</div>
 					</div>
 
