--- a/PortFólio.html
+++ b/PortFólio.html
@@ -52,8 +52,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1><br />
-								<a href="Curriculo.html"/a></h1>
+								<h1> <a href="Curriculo.html"/a></h1>
 								<p>Oláaa! Chamo-me Milene Barbosa, sou de Lisboa mais própriamente de Arruda dos Vinhos.<p>Estou atualmente no 3º ano da Licenciatura em Artes Visuais e Tecnologias. </p>
 							</header>
 							<section class="tiles">
