Acrescentei mais uma obra e texto.

--- a/CD.html
+++ b/CD.html
@@ -56,10 +56,9 @@
 								<div class="col-4"><span class="image fit"><img src="images/Capa~contra-capa - Cópia.png" alt="" /></span></div>
 								<div class="col-4"><span class="image fit"><img src="images/Capa~contra-capa.png" alt="" /></span></div>
 								<div class="col-4"><span class="image fit"><img src="images/dg-cd.png" alt="" /></span></div>
-							<p>nbhiekjrgkdjnfgvkljhgkv rhth betyerybertyb</p>
-							<p>dgkurgbr bhl eulb lb l bli blth b t  g  jkrgjkv</p>
-							<p>ryjtrhbui uhrgukbjh hguklbjhvg uhtbulkebyvg.</p>
-							<p>tgjgkujwrfbujwe iwefbkjwefb  sejfnkjwf kj ijfgnijfgbw ijfiwsfi</p>
+							<p>A partir de uma imagem aleatória de um site (um cogumelo) e uma frase também aleatória que ficaria como nome do álbum Capa e a contra-capa a aguarela em tons rosa, roxo e azuis.
+“Imagination is more important than knowledge”
+</p>
 						</div>
 					</div>
 
