--- a/Arte Narrativa.html
+++ b/Arte Narrativa.html
@@ -49,6 +49,22 @@
 					</nav>
 
 				<!-- Main -->
+				<div id="main">
+					<div class="inner">
+						<h1>A Água D'Árruda</h1>
+						<div class="row gtr-uniform">
+							<div class="col-3"><span class="image fit"><img src="images/IMG_20190601_114456.jpg" alt="" /></span></div>
+							<p> O evento Pint'Arruda, que reúne um leque de artistas plásticos, pretende representar Arruda dos Vinhos através da pintura, reforçando a importância do património material e imaterial para a preservação da memória coletiva, onde a paisagem natural e edificada estão em harmonia com as pessoas e tradições locais.<br> Este ano, sob o tema da Água decidi retratar as cascatas de Arruda.<br>Este trabalho marcou presença na exposição XX PINT'ARRUDA 2019.<br> Materiais: Óleo s/tela (30x70cm)</p>
+					</div>
+
+				<div id="main">
+					<div class="inner">
+						<h1>Quebranto </h1>
+						<div class="row gtr-uniform">
+							<div class="col-3"><span class="image fit"><img src="images/BruxaD'Arruda.jpg" alt="" /></span></div>
+							<p> A Bruxa D’Arruda faz parte de Arruda, é um dos símbolos mais importantes e uma referência do património imaterial de Arruda dos Vinhos que já vem sido falada desde o século XIX.<br> A Bruxa D’Arruda era conhecida pelos serviços de curandeira, ou seja por tirar o quebranto às pessoas. O quebranto é nada mais do que a inveja e o mau olhado que as pessoas rogam umas às outras. Esta é uma matéria que me fascina, pois na minha família também se faz isto, já desde a mãe da minha bisavó. Todas as mulheres da minha família materna tiravam e ainda hoje tiram o quebranto, colocando água numa tigela e deitando pingos de azeite lá para dentro. E ai se consegue ver se estamos “embruxados” ou não, se os pingos se colarem à borda da tigela significa inveja ruim, se eles se colarem entre si é mau olhado e se aparecerem pequenas gotas significam pragas.<br> Tendo este conhecimento tão de perto sobre este assunto, achei interessantíssimo participar neste concurso, representando o que eu idealizo que foi ou é a Bruxa D’Arruda, uma senhora idosa com o cabelo loiro, pois na antiguidade pessoas com cores de cabelo diferentes como o loiro ou o ruivo eram consideradas de bruxas, olhos representando o olho gordo, o mau olhado e a inveja e uma tijela com pingos de azeite.<br>Este trabalho marcou presença na exposição Bruxa D'Arruda.<br> Materiais: Óleo s/tela (40x80cm)</p>
+					</div>
+
 					<div id="main">
 						<div class="inner">
 							<h1>Arte Narrativa</h1>
@@ -59,14 +75,6 @@
 								<div class="col-4"><span class="image fit"><img src="images/tudo.jpg" alt="" /></span></div>
 							<p>Projeto pictórico que considera a relação entre a pintura e a literatura, escolhi o texto “A Noite”, de Guy Maupassant. A obra está representada numa série de quatro pinturas, algo mais abstrato, não tão figurativo. Os quadros representam os rostos de um homem, o narrador da obra e as cores representam os seus sentimentos.<br> O primeiro quadro tem as cores azul e amarelo representando a noite luzente que ele no início tanto adora. O segundo possui maioritariamente o branco com apontamentos a vermelho junto do peito da figura representando o frio que sente caminhando ao longo da noite e junto ao rio e o apontamento junto do peito por estar a ficar fraco e a morrer. O terceiro maioritariamente a vermelho demonstrando a dor e o sangue representando a morte. <br> Este trabalho marcou presença na exposição Percursos no Museu Municipal de Santiago do Cacém <br> Materiais: madeira (mdf) (16x15cm) utilizando a técnica mista de óleo com acrílico e tela (60x22cm) a o óleo</p>
 						</div>
-
-						<div id="main">
-							<div class="inner">
-								<h1>Quebranto </h1>
-								<div class="row gtr-uniform">
-									<div class="col-3"><span class="image fit"><img src="images/BruxaD'Arruda.jpg" alt="" /></span></div>
-									<p> A Bruxa D’Arruda faz parte de Arruda, é um dos símbolos mais importantes e uma referência do património imaterial de Arruda dos Vinhos que já vem sido falada desde o século XIX.<br> A Bruxa D’Arruda era conhecida pelos serviços de curandeira, ou seja por tirar o quebranto às pessoas. O quebranto é nada mais do que a inveja e o mau olhado que as pessoas rogam umas às outras. Esta é uma matéria que me fascina, pois na minha família também se faz isto, já desde a mãe da minha bisavó. Todas as mulheres da minha família materna tiravam e ainda hoje tiram o quebranto, colocando água numa tigela e deitando pingos de azeite lá para dentro. E ai se consegue ver se estamos “embruxados” ou não, se os pingos se colarem à borda da tigela significa inveja ruim, se eles se colarem entre si é mau olhado e se aparecerem pequenas gotas significam pragas.<br> Tendo este conhecimento tão de perto sobre este assunto, achei interessantíssimo participar neste concurso, representando o que eu idealizo que foi ou é a Bruxa D’Arruda, uma senhora idosa com o cabelo loiro, pois na antiguidade pessoas com cores de cabelo diferentes como o loiro ou o ruivo eram consideradas de bruxas, olhos representando o olho gordo, o mau olhado e a inveja e uma tijela com pingos de azeite.<br>Este trabalho marcou presença na exposição Bruxa D'Arruda.<br> Materiais: Óleo s/tela (40x80cm)</p>
-							</div>
 					</div>
 
 				<!-- Footer -->
