--- a/PortFólio.html
+++ b/PortFólio.html
@@ -53,7 +53,7 @@
 						<div class="inner">
 							<header>
 								<h1> <a href="Curriculo.html"/a></h1>
-								<p>Oláaa! Chamo-me Milene Barbosa, sou de Lisboa mais própriamente de Arruda dos Vinhos.<p>Estou atualmente no 3º ano da Licenciatura em Artes Visuais e Tecnologias. </p>
+								<p>Oláaa!<br>Chamo-me Milene Barbosa, sou de Lisboa mais própriamente de Arruda dos Vinhos.<br>Estou atualmente no 3º ano da Licenciatura em Artes Visuais e Tecnologias. </p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
