--- a/PortFólio.html
+++ b/PortFólio.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="PortFólio.html" class="logo">
-									<span class="symbol"><img src="images\logo.png" alt="" /></span><span class="title">PortFólio</span>
+									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">PortFólio</span>
 								</a>
 
 							<!-- Nav -->
@@ -67,6 +67,17 @@
 										</div>
 									</a>
 								</article>
+								<article class="style4">
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<a href="Representação.html">
+										<h2>Representação Digital</h2>
+										<div class="content">
+											<p>Trabalhos feitos em Blender</p>
+										</div>
+									</a>
+								</article>
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
@@ -89,17 +100,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="Representação.html">
-										<h2>Representação Digita</h2>
-										<div class="content">
-											<p>Trabalhos feitos em Blender</p>
-										</div>
-									</a>
-								</article>
+
 								<article class="style5">
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
