Finalmente consegui mudar o separador de pintura

--- a/PortFólio.html
+++ b/PortFólio.html
@@ -52,8 +52,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1> <a href="Curriculo.html"/a></h1>
-								<p>Oláaa!<br>Chamo-me Milene Barbosa, sou de Lisboa mais própriamente de Arruda dos Vinhos.<br>Estou atualmente no 3º ano da Licenciatura em Artes Visuais e Tecnologias. </p>
+								 <p> <a href="Curriculo.html">Oláaa!<br>Chamo-me Milene Barbosa, sou de Lisboa mais própriamente de Arruda dos Vinhos.<br>Estou atualmente no 3º ano da Licenciatura em Artes Visuais e Tecnologias.</a></p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
