Mudei nome da pag.

--- a/PortFólio.html
+++ b/PortFólio.html
@@ -41,7 +41,7 @@
 						<ul>
 							<li><a href="PortFólio.html">Home</a></li>
 							<li><a href="Curriculo.html">Curriculum</a></li>
-							<li><a href="Arte Narrativa.html">Pintura</a></li>
+							<li><a href="Pintura.html">Pintura</a></li>
 							<li><a href="Nisa Landing.html">Design de Produto</a></li>
 							<li><a href="CD.html">Design Gráfico</a></li>
 							<li><a href="Representação.html">Representação Digital</a></li>
@@ -62,11 +62,11 @@
 									<a href="Arte Narrativa.html">
 										<h2>Pintura</h2>
 										<div class="content">
-											<p>Arte Narrativa</p>
+											<p>Quadros</p>
 										</div>
 									</a>
 								</article>
-								<article class="style4">
+								<article class="style2">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
@@ -77,7 +77,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="style3">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
@@ -88,7 +88,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<article class="style4">
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
