Mudei nome da pag. de produto

--- a/PortFólio.html
+++ b/PortFólio.html
@@ -59,7 +59,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="Arte Narrativa.html">
+									<a href="Pintura.html">
 										<h2>Pintura</h2>
 										<div class="content">
 											<p>Quadros</p>
