--- a/Representação.html
+++ b/Representação.html
@@ -41,8 +41,8 @@
 						<ul>
 							<li><a href="PortFólio.html">Home</a></li>
 							<li><a href="Curriculo.html">Curriculum</a></li>
-							<li><a href="Arte Narrativa.html">Pintura</a></li>
-							<li><a href="Nisa Landing.html">Design de Produto</a></li>
+							<li><a href="Pintura.html">Pintura</a></li>
+							<li><a href="Design de Produto.html">Design de Produto</a></li>
 							<li><a href="CD.html">Design Gráfico</a></li>
 							<li><a href="Representação.html">Representação Digital</a></li>
 						</ul>
