Mudança nome pag. D.Gráfico

--- a/PortFólio.html
+++ b/PortFólio.html
@@ -43,7 +43,7 @@
 							<li><a href="Curriculo.html">Curriculum</a></li>
 							<li><a href="Pintura.html">Pintura</a></li>
 							<li><a href="Design de Produto.html">Design de Produto</a></li>
-							<li><a href="CD.html">Design Gráfico</a></li>
+							<li><a href="Design Gráfico.html">Design Gráfico</a></li>
 							<li><a href="Representação.html">Representação Digital</a></li>
 						</ul>
 					</nav>
@@ -92,7 +92,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="CD.html">
+									<a href="Design Gráfico.html">
 										<h2>Design Gráfico</h2>
 										<div class="content">
 											<p>Capa de um CD</p>
