--- a/Design de Produto.html
+++ b/Design de Produto.html
@@ -43,7 +43,7 @@
 							<li><a href="Curriculo.html">Curriculum</a></li>
 							<li><a href="Arte Narrativa.html">Pintura</a></li>
 							<li><a href="Design de Produto.html">Design de Produto</a></li>
-							<li><a href="index.html">Design Gráfico</a></li>
+							<li><a href="Design Gráfico.html">Design Gráfico</a></li>
 							<li><a href="index.html">Representação Digital</a></li>
 						</ul>
 					</nav>
