tamanho do logo no header

--- a/PortFólio.html
+++ b/PortFólio.html
@@ -62,7 +62,7 @@
 									<a href="Pintura.html">
 										<h2>Pintura</h2>
 										<div class="content">
-											<p>Quadros</p>
+											<p>A Água D'Árruda<br>Quebranto<br>Arte Narrativa</p>
 										</div>
 									</a>
 								</article>
