--- a/Curriculo.html
+++ b/Curriculo.html
@@ -41,10 +41,11 @@
 						<ul>
 							<li><a href="PortFólio.html">Home</a></li>
 							<li><a href="Curriculo.html">Curriculum</a></li>
+							<li><a href="Gravura.html">Gravura</a></li>
 							<li><a href="Pintura.html">Pintura</a></li>
 							<li><a href="Design de Produto.html">Design de Produto</a></li>
 							<li><a href="Design Gráfico.html">Design Gráfico</a></li>
-							<li><a href="index.html">Representação Digital</a></li>
+							<li><a href="Representação.html">Representação Digital</a></li>
 						</ul>
 					</nav>
 
