--- a/Pintura.html
+++ b/Pintura.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -52,7 +53,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>A Água D'Árruda</h1>
+						<h2>A Água D'Árruda</h2>
 						<div class="row gtr-uniform">
 							<div class="col-3"><span class="image fit"><img src="images/IMG_20190601_114456.jpg" alt="" /></span></div>
 							<p> O evento Pint'Arruda, que reúne um leque de artistas plásticos, pretende representar Arruda dos Vinhos através da pintura, reforçando a importância do património material e imaterial para a preservação da memória coletiva, onde a paisagem natural e edificada estão em harmonia com as pessoas e tradições locais.<br> Este ano, sob o tema da Água decidi retratar as cascatas de Arruda.<br>Este trabalho marcou presença na exposição XX PINT'ARRUDA 2019.<br> Materiais: Óleo s/tela (30x70cm)<br>Ano: 2019</p>
