--- a/Gravura.html
+++ b/Gravura.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PortFólio | Curriculo</title>
+		<title>PortFólio | Gravura</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -52,9 +52,8 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Gravura</h1>
-							<span class="image main"><img src="\Eselx\3ºAno\Design de Produto\meusite\Phantom\images\logoo.png" alt="" /></span>
-							<p>nbhiekjrgkdjnfgvkljhgkv rhth betyerybertyb </p>
+							<h2>Gravura</h2>
+							<span class="image main"><img src="images/20190528_180001.jpg" alt="" /></span>
 						</div>
 					</div>
 
