--- a/Gravura.html
+++ b/Gravura.html
@@ -53,9 +53,14 @@
 					<div id="main">
 						<div class="inner">
 							<h2>Gravura</h2>
-							<span class="image main"><img src="images/20190528_180001.jpg" alt="" /></span>
+							<div class="row gtr-uniform">
+								<div class="col-3"><span class="image fit"><img src="images/IMG_20190528_180001.jpg" alt="" /></span></div>
+								<div class="col-3"><span class="image fit"><img src="images/IMG_20190528_180020.jpg" alt="" /></span></div>
+								<div class="col-3"><span class="image fit"><img src="images/IMG_20190528_180007.jpg" alt="" /></span></div>
+								<div class="col-3"><span class="image fit"><img src="images/IMG_20190528_180012.jpg" alt="" /></span></div>
 						</div>
 					</div>
+				</div>
 
 				<!-- Footer -->
 					<footer id="footer">
