--- a/Design de Produto.html
+++ b/Design de Produto.html
@@ -63,6 +63,9 @@
 							<p>A proposta era fazer um produto para que esta tradição persicita de modo a não perder a Alma e a sua Identidade. Tendo como referência a olaria de Nisa, uma olaria em ‘vias de extinção’, a solução foi criar um pack, Nisa Landing, que serve para o utilizador construir uma pequena bilha igual às que são feitas em Nisa, de modo a promover essa atividade. Os utilizadores serão tanto jovens como adultos, tendo todos eles em comum a vontae de obter mais conhecimento sobre o património de Nisa, aprendendo assim uma das artes da terra, a Olaria Pedrada.<br>Produto de fácil interação. Destinado a toda a familia.<br>Material e Conteudo: Cartão forrado a cortiça, tendo 25,5cm de comprimento, 17cm de largura e 6,5cm de altura. No interior podesse encontrar três utensilios para esculpir, uma porção de barro, uma porção de quartzos e um manual de instruções.<br>Este trabalho marcou presença na FICOR – Feira Internacional da Cortiça em Coruche.</p>
 						</div>
 					</div>
+				</div>
+
+				
 
 				<!-- Footer -->
 					<footer id="footer">
