--- a/Design de Produto.html
+++ b/Design de Produto.html
@@ -52,20 +52,40 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h2>Nisa Landing</h2>
+							<h2>Banco de Benfica</h2>
 									<div class="row gtr-uniform">
-										<div class="col-4"><span class="image fit"><img src="images/imagem1.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/imagemm2.png" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/nisaa2.png" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/nisa2.png" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/nisa1.png" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/imagem2.png" alt="" /></span></div>
-							<p>A proposta era fazer um produto para que esta tradição persicita de modo a não perder a Alma e a sua Identidade. Tendo como referência a olaria de Nisa, uma olaria em ‘vias de extinção’, a solução foi criar um pack, Nisa Landing, que serve para o utilizador construir uma pequena bilha igual às que são feitas em Nisa, de modo a promover essa atividade. Os utilizadores serão tanto jovens como adultos, tendo todos eles em comum a vontae de obter mais conhecimento sobre o património de Nisa, aprendendo assim uma das artes da terra, a Olaria Pedrada.<br>Produto de fácil interação. Destinado a toda a familia.<br>Material e Conteudo: Cartão forrado a cortiça, tendo 25,5cm de comprimento, 17cm de largura e 6,5cm de altura. No interior podesse encontrar três utensilios para esculpir, uma porção de barro, uma porção de quartzos e um manual de instruções.<br>Este trabalho marcou presença na FICOR – Feira Internacional da Cortiça em Coruche.</p>
-						</div>
+										<div class="col-4"><span class="image fit"><img src="images/banco.jpg" alt="" /></span></div>
+							<p>Design de um banco desenhado em Benfica, inspirado em Benfica e produzido em qualquer lado<br>Inspirado na profissão de engraxador.</p>
+							</div>
 					</div>
 				</div>
 
-				
+				<div id="main">
+					<div class="inner">
+						<h2>Luminus</h2>
+								<div class="row gtr-uniform">
+									<div class="col-4"><span class="image fit"><img src="images/29063125_10210226031321369_9027687412679049216_n.png" alt="" /></span></div>
+						<p>Candeeiro em Polipropileno.</p>
+						</div>
+				</div>
+			</div>
+
+				<div id="main">
+					<div class="inner">
+						<h2>Nisa Landing</h2>
+								<div class="row gtr-uniform">
+									<div class="col-4"><span class="image fit"><img src="images/imagem1.jpg" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/imagemm2.png" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/nisaa2.png" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/nisa2.png" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/nisa1.png" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/imagem2.png" alt="" /></span></div>
+						<p>A proposta era fazer um produto para que esta tradição persicita de modo a não perder a Alma e a sua Identidade. Tendo como referência a olaria de Nisa, uma olaria em ‘vias de extinção’, a solução foi criar um pack, Nisa Landing, que serve para o utilizador construir uma pequena bilha igual às que são feitas em Nisa, de modo a promover essa atividade. Os utilizadores serão tanto jovens como adultos, tendo todos eles em comum a vontae de obter mais conhecimento sobre o património de Nisa, aprendendo assim uma das artes da terra, a Olaria Pedrada.<br>Produto de fácil interação. Destinado a toda a familia.<br>Material e Conteudo: Cartão forrado a cortiça, tendo 25,5cm de comprimento, 17cm de largura e 6,5cm de altura. No interior podesse encontrar três utensilios para esculpir, uma porção de barro, uma porção de quartzos e um manual de instruções.<br>Este trabalho marcou presença na FICOR – Feira Internacional da Cortiça em Coruche.</p>
+					</div>
+				</div>
+			</div>
+
+
 
 				<!-- Footer -->
 					<footer id="footer">
