--- a/Representação.html
+++ b/Representação.html
@@ -50,16 +50,38 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<h1>Curriculo</h1>
-							<span class="image main"><img src="\Eselx\3ºAno\Design de Produto\meusite\Phantom\images\logoo.png" alt="" /></span>
-							<p>nbhiekjrgkdjnfgvkljhgkv rhth betyerybertyb </p>
-							<p>dgkurgbr bhl eulb lb l bli blth b t  g  jkrgjkv</p>
-							<p>ryjtrhbui uhrgukbjh hguklbjhvg uhtbulkebyvg .</p>
-							<p>tgjgkujwrfbujwe iwefbkjwefb  sejfnkjwf kj ijfgnijfgbw ijfiwsfi </p>
+				<div id="main">
+					<div class="inner">
+						<h2>Cartoon-Smurf</h2>
+								<div class="row gtr-uniform">
+									<div class="col-4"><span class="image fit"><img src="images/untitled.png" alt="" /></span></div>
+						<p>Composição da personagem, o Smurf, num cenário de uma floresta mágica.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1500 samples.
+</p>
 						</div>
+				</div>
+			</div>
+
+			<div id="main">
+				<div class="inner">
+					<h2>Latas de sopa</h2>
+							<div class="row gtr-uniform">
+								<div class="col-4"><span class="image fit"><img src="images/repre2.png" alt="" /></span></div>
+					<p>Composição de duas latas de sopa Campebell’s inseridas num cenário de uma cozinha com vários acessórios.<br>Trabalho realizado no Blender versão 2.76.  Motor de rendering: Blender Cycles Render, 1000 samples.
+</p>
 					</div>
+			</div>
+			</div>
+
+			<div id="main">
+				<div class="inner">
+					<h2>Garrafas</h2>
+							<div class="row gtr-uniform">
+								<div class="col-4"><span class="image fit"><img src="images/Rep_Dig.png" alt="" /></span></div>
+					<p>Composição de três garrafas em vidro de cores e tamanhos diferentes, postas sobre uma superficie cilindrica.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1000 samples.</p>
+					</div>
+			</div>
+		</div>
+
 
 				<!-- Footer -->
 					<footer id="footer">
