Tentando meter o texto ao lado da imagem....

--- a/Representação.html
+++ b/Representação.html
@@ -55,8 +55,7 @@
 						<h2>Cartoon-Smurf</h2>
 								<div class="row gtr-uniform">
 									<div class="col-4"><span class="image fit"><img src="images/untitled.png" alt="" /></span></div>
-						<p>Composição da personagem, o Smurf, num cenário de uma floresta mágica.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1500 samples.
-</p>
+						<p>Composição da personagem, o Smurf, num cenário de uma floresta mágica.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1500 samples.</p>
 						</div>
 				</div>
 			</div>
@@ -66,8 +65,7 @@
 					<h2>Latas de sopa</h2>
 							<div class="row gtr-uniform">
 								<div class="col-4"><span class="image fit"><img src="images/repre2.png" alt="" /></span></div>
-					<p>Composição de duas latas de sopa Campebell’s inseridas num cenário de uma cozinha com vários acessórios.<br>Trabalho realizado no Blender versão 2.76.  Motor de rendering: Blender Cycles Render, 1000 samples.
-</p>
+					<p>Composição de duas latas de sopa Campebell’s inseridas num cenário de uma cozinha com vários acessórios.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1000 samples.</p>
 					</div>
 			</div>
 			</div>
