Nova secção em D.Gráfico

--- a/Design Gráfico.html
+++ b/Design Gráfico.html
@@ -50,18 +50,35 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<h1>Álbum de um CD </h1>
-							<div class="row gtr-uniform">
-								<div class="col-4"><span class="image fit"><img src="images/Capa~contra-capa - Cópia.png" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/Capa~contra-capa.png" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/dg-cd.png" alt="" /></span></div>
-							<p>A partir de uma imagem aleatória de um site (um cogumelo) e uma frase também aleatória que ficaria como nome do álbum Capa e a contra-capa a aguarela em tons rosa, roxo e azuis.
-“Imagination is more important than knowledge”
-</p>
+				<div id="main">
+					<div class="inner">
+						<h2>Rebrading</h2>
+								<div class="row gtr-uniform">
+									<div class="col-4"><span class="image fit"><img src="images/r.png" alt="" /></span></div>
+						<p> Rebrading de uma florista, Túlipa Negra.<br>Onde foi feita todo o estacionário da nova entidade.</p>
 						</div>
+				</div>
+			</div>
+
+				<div id="main">
+					<div class="inner">
+						<h2>Capa de um Álbum</h2>
+								<div class="row gtr-uniform">
+									<div class="col-4"><span class="image fit"><img src="images/dg-cd.png" alt="" /></span></div>
+						<p> Capa e a contra-capa a aguarela em tons rosa, roxo e azuis. A partir de uma imagem aleatória de um site, na qual me calhou um cogumelo e uma frase também aleatória que ficaria como nome do álbum: “Imagination is more important than knowledge”<br>Uma letra com linhas retas outra com linhas curvas, para fazer alusão aos veios da parte inferior dos cogumelos. Para representar a Imaginação pensei nas imagens do espaço, em tons de rosa, azuis, roxos e brancos.</p>
+						</div>
+				</div>
+			</div>
+
+			<div id="main">
+				<div class="inner">
+					<h2>CulturEse</h2>
+							<div class="row gtr-uniform">
+								<div class="col-4"><span class="image fit"><img src="images/Mockup_magazine.png" alt="" /></span></div>
+					<p>Composição da personagem, o Smurf, num cenário de uma floresta mágica.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1500 samples.</p>
 					</div>
+			</div>
+		</div>
 
 				<!-- Footer -->
 					<footer id="footer">
