--- a/PortFólio.html
+++ b/PortFólio.html
@@ -85,7 +85,7 @@
 									<a href="Representação.html">
 										<h2>Representação Digital</h2>
 										<div class="content">
-											<p>Trabalhos feitos em Blender</p>
+											<p>Smurf<br>Latas de Sopa<br>Garrafas de Vidro</p>
 										</div>
 									</a>
 								</article>
@@ -96,7 +96,7 @@
 									<a href="Design de Produto.html">
 										<h2>Design de Produto</h2>
 										<div class="content">
-											<p>Nisa Landing</p>
+											<p>Banco de Benfica<br>Luminus<br>Nisa Landing</p>
 										</div>
 									</a>
 								</article>
@@ -107,7 +107,7 @@
 									<a href="Design Gráfico.html">
 										<h2>Design Gráfico</h2>
 										<div class="content">
-											<p>Capa de um CD</p>
+											<p>Rebrading<br>Capa de um CD<br>CulturEse</p>
 										</div>
 									</a>
 								</article>
@@ -117,9 +117,9 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Não sei</h2>
+										<h2>Escultura</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Grafonola Falante<br>Fidelium<br>Mãos Inquietas<br>Ninhus</p>
 										</div>
 									</a>
 								</article>
