continuação de escult.

--- a/Design Gráfico.html
+++ b/Design Gráfico.html
@@ -52,10 +52,10 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h2>Rebrading</h2>
+						<h2>Rebranding</h2>
 								<div class="row gtr-uniform">
 									<div class="col-4"><span class="image fit"><img src="images/r.png" alt="" /></span></div>
-						<p> Rebrading de uma florista, Túlipa Negra.<br>Onde foi feita todo o estacionário da nova entidade.</p>
+						<p> Rebranding de uma florista, Túlipa Negra.<br>Onde foi feita todo o estacionário da nova entidade.</p>
 						</div>
 				</div>
 			</div>
