--- a/PortFólio.html
+++ b/PortFólio.html
@@ -46,6 +46,7 @@
 							<li><a href="Design de Produto.html">Design de Produto</a></li>
 							<li><a href="Design Gráfico.html">Design Gráfico</a></li>
 							<li><a href="Representação.html">Representação Digital</a></li>
+							<li><a href="Escultura.html">Escultura</a></li>
 						</ul>
 					</nav>
 
@@ -116,7 +117,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Escultura.html">
 										<h2>Escultura</h2>
 										<div class="content">
 											<p>Grafonola Falante<br>Fidelium<br>Mãos Inquietas<br>Ninhus</p>
