--- a/Escultura.html
+++ b/Escultura.html
@@ -61,16 +61,6 @@
 				</div>
 			</div>
 
-			<div id="main">
-				<div class="inner">
-					<h2>Ninhus</h2>
-							<div class="row gtr-uniform">
-								<div class="col-4"><span class="image fit"><img src="images/IMG_20190602_020003.jpg" alt="" /></span></div>
-					<p> Rebranding de uma florista, Túlipa Negra.<br>Onde foi feita todo o estacionário da nova entidade.</p>
-					</div>
-			</div>
-		</div>
-
 		<div id="main">
 			<div class="inner">
 				<h2>Mãos Inquietas</h2>
@@ -85,8 +75,8 @@
 		<div class="inner">
 			<h2>Fidelium</h2>
 					<div class="row gtr-uniform">
-						<div class="col-4"><span class="image fit"><img src="images/IMG_9106.jpg" alt="" /></span></div>
-			<p> Rebranding de uma florista, Túlipa Negra.<br>Onde foi feita todo o estacionário da nova entidade.</p>
+						<div class="col-4"><span class="image fit"><img src="images/IMG_3892.jpg" alt="" /></span></div>
+			<p> Escultura com objetos do quotidiano<br>Optei por escolher os talhetes de plástico.</p>
 			</div>
 	</div>
 </div>
@@ -96,7 +86,7 @@
 		<h2>Grafonola Falante</h2>
 				<div class="row gtr-uniform">
 					<div class="col-4"><span class="image fit"><img src="images/20170321_163442.jpg" alt="" /></span></div>
-		<p> Escultura em barro<br>Tinha como base juntar dois obejos do quotidiano, eu decidi usar a Grafonola Falante </p>
+		<p> Escultura em barro<br>Tinha como base juntar dois objetos do quotidiano, eu decidi usar a Grafonola Falante </p>
 		</div>
 </div>
 </div>
