--- a/Curriculo.html
+++ b/Curriculo.html
@@ -46,6 +46,7 @@
 							<li><a href="Design de Produto.html">Design de Produto</a></li>
 							<li><a href="Design Gráfico.html">Design Gráfico</a></li>
 							<li><a href="Representação.html">Representação Digital</a></li>
+							<li><a href="Escultura.html">Escultura</a></li>
 						</ul>
 					</nav>
 
