--- a/Escultura.html
+++ b/Escultura.html
@@ -56,7 +56,7 @@
 						<h2>Ninhus</h2>
 								<div class="row gtr-uniform">
 									<div class="col-4"><span class="image fit"><img src="images/IMG_20190602_020003.jpg" alt="" /></span></div>
-						<p> Rebranding de uma florista, Túlipa Negra.<br>Onde foi feita todo o estacionário da nova entidade.</p>
+						<p> Com base no tema Resiliência criei um ninho que faz o contraste com o nosso ambiente, onde os animais são obrigados a ser resiliêntes para com as nossas atitudes.<br> A questão que queremos levantar com este projeto é “Conseguiremos algum dia desenvolver habitats que respeitem o meio ambiente e os outros seres vivos que nele habitam?”</p>
 						</div>
 				</div>
 			</div>
@@ -66,7 +66,7 @@
 				<h2>Mãos Inquietas</h2>
 						<div class="row gtr-uniform">
 							<div class="col-4"><span class="image fit"><img src="images/IMG_9106.jpg" alt="" /></span></div>
-				<p> Rebranding de uma florista, Túlipa Negra.<br>Onde foi feita todo o estacionário da nova entidade.</p>
+				<p>Duas mãos contrastantes entre o bem e o mal.<br>Materiais: Gesso, Plástico e Tecido</p>
 				</div>
 		</div>
 	</div>
@@ -76,7 +76,7 @@
 			<h2>Fidelium</h2>
 					<div class="row gtr-uniform">
 						<div class="col-4"><span class="image fit"><img src="images/IMG_3892.jpg" alt="" /></span></div>
-			<p> Escultura com objetos do quotidiano<br>Optei por escolher os talhetes de plástico.</p>
+			<p> Escultura com objetos do quotidiano<br>Optei por escolher os talhetes de plástico e a forma de um flamingo, por ser um animal fiel.</p>
 			</div>
 	</div>
 </div>
