--- a/PortFólio.html
+++ b/PortFólio.html
@@ -108,7 +108,7 @@
 									<a href="Design Gráfico.html">
 										<h2>Design Gráfico</h2>
 										<div class="content">
-											<p>Rebrading<br>Capa de um CD<br>CulturEse</p>
+											<p>Rebranding<br>Capa de um Álbum<br>CulturEse</p>
 										</div>
 									</a>
 								</article>
@@ -120,7 +120,7 @@
 									<a href="Escultura.html">
 										<h2>Escultura</h2>
 										<div class="content">
-											<p>Grafonola Falante<br>Fidelium<br>Mãos Inquietas<br>Ninhus</p>
+											<p>Ninhus<br>Mãos Inquietas<br>Fidelium<br>Grafonola Falante</p>
 										</div>
 									</a>
 								</article>
