--- a/Curriculo.html
+++ b/Curriculo.html
@@ -40,20 +40,20 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="PortFólio.html">Home</a></li>
-							<li><a href="Curriculo.html">Curriculum</a></li>
+							<li><a href="Curriculo.html">Curriculo</a></li>
 							<li><a href="Gravura.html">Gravura</a></li>
 							<li><a href="Pintura.html">Pintura</a></li>
+							<li><a href="Escultura.html">Escultura</a></li>
 							<li><a href="Design de Produto.html">Design de Produto</a></li>
 							<li><a href="Design Gráfico.html">Design Gráfico</a></li>
 							<li><a href="Representação.html">Representação Digital</a></li>
-							<li><a href="Escultura.html">Escultura</a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h2>Curriculo</h2>
+							<h2>Currículo</h2>
 							<img src="images/Currículo Milene Barbosa2.jpg" alt="" />
 						</div>
 					</div>
