--- a/PortFólio.html
+++ b/PortFólio.html
@@ -40,13 +40,13 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="PortFólio.html">Home</a></li>
-							<li><a href="Curriculo.html">Curriculum</a></li>
+							<li><a href="Curriculo.html">Currículo</a></li>
 							<li><a href="Gravura.html">Gravura</a></li>
 							<li><a href="Pintura.html">Pintura</a></li>
+							<li><a href="Escultura.html">Escultura</a></li>
 							<li><a href="Design de Produto.html">Design de Produto</a></li>
 							<li><a href="Design Gráfico.html">Design Gráfico</a></li>
 							<li><a href="Representação.html">Representação Digital</a></li>
-							<li><a href="Escultura.html">Escultura</a></li>
 						</ul>
 					</nav>
 
@@ -79,14 +79,14 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="style5">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="Representação.html">
-										<h2>Representação Digital</h2>
+									<a href="Escultura.html">
+										<h2>Escultura</h2>
 										<div class="content">
-											<p>Smurf<br>Latas de Sopa<br>Garrafas de Vidro</p>
+											<p>Ninhus<br>Mãos Inquietas<br>Fidelium<br>Grafonola Falante</p>
 										</div>
 									</a>
 								</article>
@@ -112,18 +112,18 @@
 										</div>
 									</a>
 								</article>
-
-								<article class="style5">
+								<article class="style2">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="Escultura.html">
-										<h2>Escultura</h2>
+									<a href="Representação.html">
+										<h2>Representação Digital</h2>
 										<div class="content">
-											<p>Ninhus<br>Mãos Inquietas<br>Fidelium<br>Grafonola Falante</p>
+											<p>Smurf<br>Latas de Sopa<br>Garrafas de Vidro</p>
 										</div>
 									</a>
 								</article>
+
 							</section>
 						</div>
 					</div>
