--- a/PortFólio.html
+++ b/PortFólio.html
@@ -59,7 +59,7 @@
 							<section class="tiles">
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/Sem Título.png" alt="" />
 									</span>
 									<a href="Gravura.html">
 										<h2>Gravura</h2>
@@ -70,7 +70,7 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/Sem Título.png" alt="" />
 									</span>
 									<a href="Pintura.html">
 										<h2>Pintura</h2>
@@ -81,7 +81,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/Sem Título.png" alt="" />
 									</span>
 									<a href="Escultura.html">
 										<h2>Escultura</h2>
@@ -92,7 +92,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/Sem Título.png" alt="" />
 									</span>
 									<a href="Design de Produto.html">
 										<h2>Design de Produto</h2>
@@ -103,7 +103,7 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/Sem Título.png" alt="" />
 									</span>
 									<a href="Design Gráfico.html">
 										<h2>Design Gráfico</h2>
@@ -114,7 +114,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/Sem Título.png" alt="" />
 									</span>
 									<a href="Representação.html">
 										<h2>Representação Digital</h2>
