--- a/Design Gráfico.html
+++ b/Design Gráfico.html
@@ -56,7 +56,7 @@
 						<h2>Rebranding</h2>
 								<div class="row gtr-uniform">
 									<div class="col-4"><span class="image fit"><img src="images/r.png" alt="" /></span></div>
-						<p> Rebranding de uma florista, Túlipa Negra.<br>Onde foi feita todo o estacionário da nova entidade.</p>
+						<p> Rebranding de uma florista, Túlipa Negra.<br>Onde foi feita todo o estacionário da nova entidade.<br>Ano:2019</p>
 						</div>
 				</div>
 			</div>
@@ -66,7 +66,7 @@
 						<h2>Capa de um Álbum</h2>
 								<div class="row gtr-uniform">
 									<div class="col-4"><span class="image fit"><img src="images/dg-cd.png" alt="" /></span></div>
-						<p> Capa e a contra-capa a aguarela em tons rosa, roxo e azuis. A partir de uma imagem aleatória de um site, na qual me calhou um cogumelo e uma frase também aleatória que ficaria como nome do álbum: “Imagination is more important than knowledge”<br>Uma letra com linhas retas outra com linhas curvas, para fazer alusão aos veios da parte inferior dos cogumelos. Para representar a Imaginação pensei nas imagens do espaço, em tons de rosa, azuis, roxos e brancos.</p>
+						<p> Capa e a contra-capa a aguarela em tons rosa, roxo e azuis. A partir de uma imagem aleatória de um site, na qual me calhou um cogumelo e uma frase também aleatória que ficaria como nome do álbum: “Imagination is more important than knowledge”<br>Uma letra com linhas retas outra com linhas curvas, para fazer alusão aos veios da parte inferior dos cogumelos. Para representar a Imaginação pensei nas imagens do espaço, em tons de rosa, azuis, roxos e brancos.<br>Ano:2016</p>
 						</div>
 				</div>
 			</div>
@@ -76,7 +76,7 @@
 					<h2>CulturEse</h2>
 							<div class="row gtr-uniform">
 								<div class="col-4"><span class="image fit"><img src="images/Mockup_magazine.png" alt="" /></span></div>
-					<p>Composição da personagem, o Smurf, num cenário de uma floresta mágica.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1500 samples.</p>
+					<p>Composição da personagem, o Smurf, num cenário de uma floresta mágica.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1500 samples.<br>Ano:2017</p>
 					</div>
 			</div>
 		</div>
