--- a/Escultura.html
+++ b/Escultura.html
@@ -56,7 +56,7 @@
 						<h2>Ninhus</h2>
 								<div class="row gtr-uniform">
 									<div class="col-4"><span class="image fit"><img src="images/IMG_20190602_020003.jpg" alt="" /></span></div>
-						<p> Com base no tema Resiliência criei um ninho que faz o contraste com o nosso ambiente, onde os animais são obrigados a ser resiliêntes para com as nossas atitudes.<br> A questão que queremos levantar com este projeto é “Conseguiremos algum dia desenvolver habitats que respeitem o meio ambiente e os outros seres vivos que nele habitam?”</p>
+						<p> Com base no tema Resiliência criei um ninho que faz o contraste com o nosso ambiente, onde os animais são obrigados a ser resiliêntes para com as nossas atitudes.<br> A questão que queremos levantar com este projeto é “Conseguiremos algum dia desenvolver habitats que respeitem o meio ambiente e os outros seres vivos que nele habitam?”<br>Ano:2019</p>
 						</div>
 				</div>
 			</div>
@@ -66,7 +66,7 @@
 				<h2>Mãos Inquietas</h2>
 						<div class="row gtr-uniform">
 							<div class="col-4"><span class="image fit"><img src="images/IMG_9106.jpg" alt="" /></span></div>
-				<p>Duas mãos contrastantes entre o bem e o mal.<br>Materiais: Gesso, Plástico e Tecido</p>
+				<p>Duas mãos contrastantes entre o bem e o mal.<br>Materiais: Gesso, Plástico e Tecido.<br>Ano:2018</p>
 				</div>
 		</div>
 	</div>
@@ -76,7 +76,7 @@
 			<h2>Fidelium</h2>
 					<div class="row gtr-uniform">
 						<div class="col-4"><span class="image fit"><img src="images/IMG_3892.jpg" alt="" /></span></div>
-			<p> Escultura com objetos do quotidiano<br>Optei por escolher os talhetes de plástico e a forma de um flamingo, por ser um animal fiel.</p>
+			<p> Escultura com objetos do quotidiano<br>Optei por escolher os talhetes de plástico e a forma de um flamingo, por ser um animal fiel.<br>Ano:2017</p>
 			</div>
 	</div>
 </div>
@@ -86,7 +86,7 @@
 		<h2>Grafonola Falante</h2>
 				<div class="row gtr-uniform">
 					<div class="col-4"><span class="image fit"><img src="images/20170321_163442.jpg" alt="" /></span></div>
-		<p> Escultura em barro<br>Tinha como base juntar dois objetos do quotidiano, eu decidi usar a Grafonola Falante </p>
+		<p> Escultura em barro<br>Tinha como base juntar dois objetos do quotidiano, eu decidi usar a Grafonola Falante.<br>Ano:2016</p>
 		</div>
 </div>
 </div>
