--- a/Representação.html
+++ b/Representação.html
@@ -56,7 +56,7 @@
 						<h2>Cartoon-Smurf</h2>
 								<div class="row gtr-uniform">
 									<div class="col-4"><span class="image fit"><img src="images/untitled.png" alt="" /></span></div>
-						<p>Composição da personagem, o Smurf, num cenário de uma floresta mágica.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1500 samples.</p>
+						<p>Composição da personagem, o Smurf, num cenário de uma floresta mágica.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1500 samples.<br>Ano:2018</p>
 						</div>
 				</div>
 			</div>
@@ -66,7 +66,7 @@
 					<h2>Latas de sopa</h2>
 							<div class="row gtr-uniform">
 								<div class="col-4"><span class="image fit"><img src="images/repre2.png" alt="" /></span></div>
-					<p>Composição de duas latas de sopa Campebell’s inseridas num cenário de uma cozinha com vários acessórios.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1000 samples.</p>
+					<p>Composição de duas latas de sopa Campebell’s inseridas num cenário de uma cozinha com vários acessórios.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1000 samples.<br>Ano:2017</p>
 					</div>
 			</div>
 			</div>
@@ -76,7 +76,7 @@
 					<h2>Garrafas</h2>
 							<div class="row gtr-uniform">
 								<div class="col-4"><span class="image fit"><img src="images/Rep_Dig.png" alt="" /></span></div>
-					<p>Composição de três garrafas em vidro de cores e tamanhos diferentes, postas sobre uma superficie cilindrica.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1000 samples.</p>
+					<p>Composição de três garrafas em vidro de cores e tamanhos diferentes, postas sobre uma superficie cilindrica.<br>Trabalho realizado no Blender versão 2.76. Motor de rendering: Blender Cycles Render, 1000 samples.<br>Ano:2017</p>
 					</div>
 			</div>
 		</div>
