--- a/Pintura.html
+++ b/Pintura.html
@@ -53,7 +53,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h2>A Água D'Árruda</h2>
+						<h2>A Água D'Arruda</h2>
 						<div class="row gtr-uniform">
 							<div class="col-3"><span class="image fit"><img src="images/IMG_20190601_114456.jpg" alt="" /></span></div>
 							<p> O evento Pint'Arruda, que reúne um leque de artistas plásticos, pretende representar Arruda dos Vinhos através da pintura, reforçando a importância do património material e imaterial para a preservação da memória coletiva, onde a paisagem natural e edificada estão em harmonia com as pessoas e tradições locais.<br> Este ano, sob o tema da Água decidi retratar as cascatas de Arruda.<br>Este trabalho marcou presença na exposição XX PINT'ARRUDA 2019.<br> Materiais: Óleo s/tela (30x70cm)<br>Ano: 2019</p>
